--- a/blogicum/templates/base.html
+++ b/blogicum/templates/base.html
@@ -11,13 +11,15 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/fav/favicon-16x16.png' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <title>
-      {% block title %}{% endblock %}
+      {% block title %}Блогикум{% endblock %}
     </title>
   </head>
 <body>
   {% include "includes/header.html" %}
   <main>
+    <div class="container py-5">
     {% block content %}{% endblock %}
+    </div>
   </main>
 {% include "includes/footer.html" %}
 </body>
