--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -3,16 +3,8 @@
   {{ post.location }}. {{ post.date }}
 {% endblock %}
 {% block content %}
-  <div class="container py-5">
-    <article>
-      <ul>
-        <li>{{ post.location }}</li>
-        <li>{{ post.date }}</li>
-        <li>
-          Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a>  
-        </li>
-      </ul>           
-      <p>{{ post.text }}</p>          
-    </article>                
-  </div>
+  <article>
+    {% include "blog/includes/article.html" %}   
+    <p>{{ post.text|linebreaks }}</p>          
+  </article>                
 {% endblock %}
