--- a/blogicum/templates/includes/header.html
+++ b/blogicum/templates/includes/header.html
@@ -8,17 +8,17 @@
     </a>        
     <ul class="nav  nav-pills">
       <li class="nav-item">
-      <a class="nav-link" href="{% url 'blog:index' %}">
+      <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="{% url 'blog:index' %}">
         Лента записей
       </a>
       </li>
       <li class="nav-item">              
-      <a class="nav-link" href="{% url 'pages:about' %}">
+      <a class="nav-link {% if request.path == '/pages/about/' %}active{% endif %}" href="{% url 'pages:about' %}">
         О проекте
       </a>
       </li>
       <li class="nav-item">
-      <a class="nav-link" href="{% url 'pages:rules' %}">
+      <a class="nav-link {% if request.path == '/pages/rules/' %}active{% endif %}" href="{% url 'pages:rules' %}">
         Наши правила
       </a>
       </li>
